# Privat24-Mobile-Scraper

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  pyproject.toml  run.py
pb24exporter/: cli.py  main.py  parser.py  record.py  scraper.py  settings.py
pb24exporter/exporters/: __init__.py  factory.py  xlsx.py
pb24exporter/pages/: __init__.py  history.py  transaction.py
pb24exporter/scraper/: __init__.py  scraper.py
pb24exporter/scraper/pages/: __init__.py  history.py  transaction.py
